deploy/overlay/document-processor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docproc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docproc
  template:
    metadata:
      labels:
        app: docproc
    spec:
      containers:
      - name: docproc
        image: rutush10/document-processor:v0.0.17
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: "2"
            memory: 4Gi
          limits:
            cpu: "2"
            memory: 4Gi
