deploy/overlay/document-processor/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: docproc
spec:
  serviceName: docproc
  replicas: 3
  selector:
    matchLabels:
      app: docproc
  template:
    metadata:
      labels:
        app: docproc
    spec:
      # nodeSelector:
      #   kubernetes.io/hostname: master
      containers:
      - name: docproc
        image: rutush10/document-processor:v0.0.20
        ports:
        - containerPort: 7070
        resources:
          requests:
            cpu: "2"
            memory: 4Gi
          limits:
            cpu: "2"
            memory: 4Gi
        volumeMounts:
          - name: docproc-data
            mountPath: /task
  volumeClaimTemplates:
  - metadata:
      name: docproc-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: local
      resources:
        requests:
          storage: 1Gi


# db_1453065f762af81
# Tv7}J,Zt?.XPQFs;
