deploy/overlay/document-processor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docproc-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - docproc.rutu-sh.com
      secretName: docproc-tls-secret
  rules:
  - host: docproc.rutu-sh.com
    http:
      paths: 
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: docproc
            port:
              number: 7070
